fix code block text color in dark mode

--- a/css/global.css
+++ b/css/global.css
@@ -27,6 +27,10 @@
   outline-width: var(--border-1);
 }
 
+:where(:not(pre) > code) {
+  color: var(--text-2);
+}
+
 html:focus-within {
   scroll-behavior: smooth;
 }
